<resources>
    <string name="app_name">emSAT</string>
    <string name="temp_background_check_note">Note: Your background check will be performed by a company which is an industry leader in that field. TLS 1.2 (high secured data transmission) will be used to protect your privacy.</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_my_test">My Test</string>
    <string name="menu_help">Help</string>
    <string name="menu_sign_out">Logout</string>

    <string name="are_you_sure_you_want_to_sign_out">Are You sure You want to Sign out?</string>
    <string name="internal_storage">Internal storage</string>

    <string name="permission_contacts_rationale">Contact permissions is required to Call. Requesting permission.</string>
    <string name="permission_read_contacts_rationale">Read Contact permissions is required to fetch Contact List. Requesting permission.</string>
    <string name="permission_read_contacts_settings">Read Contact permissions is not granted. You can grant it from Settings >> Permissions</string>
    <string name="permission_contacts_settings">Contact permissions is not granted. You can grant it from Settings >> Permissions</string>
    <string name="permission_location_settings">Location permissions is not granted. You can grant it from Settings >> Permissions</string>
    <string name="permission_camera_rationale">Camera permissions is required for capturing pictures. Requesting permission.</string>
    <string name="permission_camera_settings">Camera permissions is not granted. You can grant it from Settings >> Permissions</string>
    <string name="permission_storage_rationale">Storage permissions is required for accessing pictures. Requesting permission.</string>
    <string name="permission_storage_settings">Storage permissions is not granted. You can grant it from Settings >> Permissions</string>

    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="save">Save</string>
    <string name="sample">Sample</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="country_code">Code</string>
    <string name="signup_msg">Don\'t have an account?</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="please_enter_mobile_no">Please enter Mobile No</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_valid_email">Please enter valid email id</string>
    <string name="please_enter_valid_mobile_no">Please enter valid mobile number</string>
    <string name="unable_to_load_content">Unable to load content</string>
    <string name="ok">OK</string>
    <string name="okay">Okay</string>

    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="faqs">FAQ\'s</string>
    <string name="profile_info">Profile Info</string>
    <string name="change_password">Change Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="new_password_star">New Password*</string>
    <string name="confirm_password_star">Confirm Password*</string>
    <string name="password_star">Password*</string>
    <string name="update">Update</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_hint_available">No hint available at the moment</string>
    <string name="no_suggestion_available">No suggestion available</string>
    <string name="password_must_contains_atleast_8_characters">Passsword must contain atleast 8 characters</string>
    <string name="old_password_must_contains_atleast_8_characters">Old Passsword must contain atleast 8 characters</string>
    <string name="new_password_must_contains_atleast_8_characters">New Passsword must contain atleast 8 characters</string>
    <string name="confirm_password_must_contains_atleast_8_characters">Confirm Passsword must contain atleast 8 characters</string>
    <string name="new_password_confirm_password_must_be_same">Passwords dont match</string>
    <string name="password_confirm_password_must_be_same">Passwords dont match</string>
    <string name="password_invalid">Invalid Password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="retake_quiz">Re-take Quiz</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="suggestion">Click here for Suggestion</string>
    <string name="suggestion_title">Suggestion</string>

    <string name="practice_exam">Practice Exam</string>
    <string name="quit">Quit</string>
    <string name="time_out">Time Out</string>
    <string name="time_out_des">Your exam time has been finished</string>
    <string name="quit_exam">Quit Exam</string>
    <string name="quit_exam_des">Are You sure you want to quit exam?</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="hint">Hint</string>
    <string name="reset">Reset</string>
    <!--<string name="blanks">____________</string>-->
    <string name="blanks">______</string>
    <string name="your_score">Your score</string>
    <string name="check_answers">Check Answers</string>

    <string name="skip_ans">Skip answers\n</string>
    <string name="correct_ans">Correct answers\n</string>
    <string name="wrong_ans">Wrong answers\n</string>
    <string name="done">Done</string>
    <string name="score_card">Score Card</string>

    <string name="invalid_token_msg">You can not sign-in into more than one device with same mobile number.</string>
    <string name="password_changed_successfully">Password has been changed</string>

    <!--Photo-->
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="select_image">Select Image</string>
    <string name="picture_not_taken">Picture is not taken</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_age">Age must be at least 18</string>

    <string name="dialog_title_are_you_sure">Are you sure?</string>
    <string name="dialog_desc_go_without_submit_score">You want to go back without submit your score?</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="unlock_des">Complete previous category to unlock this one</string>
</resources>
