<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context="com.vrinsoft.emsat.activity.ExamResult">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="vertical">

            <com.vrinsoft.emsat.utils.widget.CircleProgressView
                android:id="@+id/circle_progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtSkip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.95"
                    android:gravity="center"
                    android:text="@string/skip_ans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txtCorrect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:gravity="center"
                    android:text="@string/correct_ans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txtWrong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.95"
                    android:gravity="center"
                    android:text="@string/wrong_ans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtReTake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_opt_selected"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/retake_quiz"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtCheckAns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_opt_selected"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/check_answers"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:visibility="visible" />

        </LinearLayout>
    </RelativeLayout>
</layout>