<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAboutUs"
                style="@style/BoxEditTextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableRight="@drawable/arrow_right_white"
                android:gravity="center_vertical"
                android:padding="@dimen/_12sdp"
                android:text="@string/about_us"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/txtPrivacy"
                style="@style/BoxEditTextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableRight="@drawable/arrow_right_white"
                android:gravity="center_vertical"
                android:padding="@dimen/_12sdp"
                android:text="@string/privacy_policy"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTerms"
                style="@style/BoxEditTextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableRight="@drawable/arrow_right_white"
                android:gravity="center_vertical"
                android:padding="@dimen/_12sdp"
                android:text="@string/terms"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/txtFaqs"
                style="@style/BoxEditTextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableRight="@drawable/arrow_right_white"
                android:gravity="center_vertical"
                android:padding="@dimen/_12sdp"
                android:text="@string/faqs"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </LinearLayout>
</layout>