<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vrin.flexipool.ui.change_password.ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_top_bottom_curved_white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bg_top_curved_gold"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtChangePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/change_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />

                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_close" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <LinearLayout
                    android:id="@+id/llPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/BoxEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@.,- "
                        android:hint="@string/password_star"
                        android:inputType="textWebPassword"
                        android:maxLength="12"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                    <View
                        android:id="@+id/vPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtPassword"
                    style="@style/BoxEditTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_star"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <LinearLayout
                    android:id="@+id/llNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etNewPassword"
                        style="@style/BoxEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@.,- "
                        android:hint="@string/new_password_star"
                        android:inputType="textWebPassword"
                        android:maxLength="12"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                    <View
                        android:id="@+id/vNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtNewPassword"
                    style="@style/BoxEditTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password_star"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <LinearLayout
                    android:id="@+id/llCPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etCPassword"
                        style="@style/BoxEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@.,- "
                        android:hint="@string/confirm_password_star"
                        android:inputType="textWebPassword"
                        android:maxLength="12"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                    <View
                        android:id="@+id/vCPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtCPassword"
                    style="@style/BoxEditTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password_star"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txtUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_rect_btn_gold"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

    </LinearLayout>

</layout>
